Fixed styling issue of tags select menu on writepage in dark mode the background stays in white color!

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -236,6 +236,10 @@ a {
   background: var(--lightBG) !important;
 }
 
+.css-1nmdiq5-menu{
+  background: var(--lightBG) !important;
+}
+
 /* React select custom css classes overrides styles......... */
 
 @media screen and (max-width:1536px) {}
